# libpam-nopass

./: Makefile.am  configure.ac  pam_nopass.c
debian/: README.Debian  README.source  changelog  control  libpam-nopass.prerm
debian/pam-configs/: nopass
